interactive-rating/style.css
:root {
  --clr-primary-100: hsl(25, 97%, 53%);

  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-neutral-200: hsl(217, 12%, 63%);
  --clr-neutral-300: hsl(216, 12%, 54%);

  --clr-accent-100: hsl(213, 19%, 18%);
  --clr-accent-200: hsl(216, 12%, 8%);

  --ff-primary:'Overpass', sans-serif;;

  --fw-regular: 400;
  --fw-bold: 700;

  

  --size-100: 0.25rem;
  --size-200: 0.5rem;
  --size-300: 0.75rem;
  --size-400: 1rem;
  --size-450: 1.2rem;
  --size-500: 1.5rem;
  --size-550: 1.875rem;
  --size-600: 2rem;
  --size-700: 3rem;
  --size-800: 4rem;
  --size-900: 5rem;

}


/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
*{
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body{
    min-height: 100%;
    overflow-x: hidden;
}
/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-family: var(--ff-primary);
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}



/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* general styling */
.hide {
  display: none;
}
body{
  display: flex;
  height: 100vh;
  justify-content: center;
  align-items: center;
  background-color: var(--clr-accent-200);
}
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: hsl(215, 25%, 14%);
  color: var(--clr-neutral-100);
  border-radius: 25px;
}

.star {
  border-radius: 50%;
  width: 45px;
  height: 45px;
  display: grid;
  justify-content: center;
  align-items: center;
  background-color: hsl(210, 19%, 18%);
}

.box-body p{
  max-width: 35ch;
}
.box-1 > * {
  margin: var(--size-500);
}

.submit {
  width: 100%;
  border-radius: 100vw;
  border: 0;
  color: var(--clr-neutral-100);
  background-color: var(--clr-primary-100);
  padding-block: 4px;
  font-size: 15px;
  margin-bottom: var(--size-300);
  cursor: pointer;
}
.submit:hover {
  background-color: var(--clr-neutral-100);
  color: var(--clr-primary-100);
}

.buttons {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-block: var(--size-600);
}
.buttons button{
  border-radius: 50%;
  width: 45px;
  height: 45px;
  border: 0;
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: hsl(210, 19%, 18%);
  color: var(--clr-neutral-200);
  cursor: pointer;
}
.buttons button:hover{
  background-color: var(--clr-primary-100);
  color: var(--clr-neutral-100);
}

@media (max-width: 50em) {
  .container {
    margin-inline: var(--size-500);
  }
}


/* thankyou section */
.box-2 {
  text-align: center;
  margin-block: var(--size-600);
  margin-inline: var(--size-500);
}
.illustration {
  display: flex;
  justify-content: center;
}

.rating {
  color: var(--clr-primary-100);
  max-width: max-content;
  position: relative;
  left: 50%;
  transform: translate(-50%);
  background-color: hsl(210, 19%, 18%);
  border-radius: 100vw;
  padding-inline: 10px;
  padding-block: 2px;
}

/* utility classes */
.fw-regular {
  font-weight: var(--fw-regular);
}
.fw-bold {
  font-weight: var(--fw-bold);
}
.fs-100 {
  font-size: 15px;
}
.fs-200 {
  font-size: 20px;
}
.fs-300 {}

.clr-100 {
  color: var(--clr-neutral-300);
}
.margin-block-start {
  margin-block: var(--size-500);
}
.margin-block {
  margin-block: var(--size-100);
}

